# blob-war

./: .gitignore  README.md
blobwar/: Cargo.toml  Makefile
blobwar/benches/: benchmark.rs  fast_benchmark.rs
blobwar/boards/: chess  constrained  cross  fortress  inside  irregular  island  path  quantum  rings  standard  strange  test  x
blobwar/examples/: board.rs  serialize.rs
blobwar/src/: board.rs  configuration.rs  lib.rs  main.rs  positions.rs  shmem.rs
blobwar/src/strategy/: alphabeta.rs  alphabetapass.rs  alphabetatable.rs  greedy.rs  human.rs  iterative.rs  minmax.rs  minmaxpar.rs  mod.rs  network.rs
