[package]
name = "blobwar"
version = "0.1.1"
authors = ["frederic wagner <frederic.wagner@imag.fr>"]
edition = "2018"

[profile.release]
debug = true

[dependencies]
term="*"
itertools="*"
libc="0.2"
glob="*"
serde_derive="*"
serde="*"
serde_json="*"
rayon = "1.7"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "strategy_benchmark"
harness = false

[target.'cfg(unix)'.dependencies]
nix="0.6"
